--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 			<div id="logo">
 				<img src="images/logos/large-logo.png" alt="Logo">
 			</div>
-			<a href="home.html">Home</a>
+			<a href="index.html">Home</a>
 			<a href="about.html">About</a>
 			<a class="current-page" href="menu.html">Menu</a>
 			<a href="delivery.html">Delivery</a>
