--- a/delivery.html
+++ b/delivery.html
@@ -14,7 +14,7 @@
 				<img src="images/logos/large-logo.png" alt="Logo">
 			</div>
 			
-			<a href="home.html">Home</a>
+			<a href="delivery.html">Home</a>
 			<a href="about.html">About</a>
 			<a href="menu.html">Menu</a>
 			<a class="current-page" href="delivery.html">Delivery</a>
